# Backend-Python-Flask

./: README.md  app.py  configfile.ini  pyproject.toml  requirements.txt  routes.py  test.py
database/: connection.py
response/: error.py
server/: app.py  routes.py
server/config/: config.py
server/database/models/: patientModel.py
server/response/: success.py
server/services/: home.py  patientService.py
server/util/: requestBodyModel.py
services/: patientService.py
util/: helper.py
